[gd_scene load_steps=5 format=3 uid="uid://uwmwjrr70k8q"]

[ext_resource type="Script" path="res://scripts/projectiles/basic_projectile.gd" id="1_yjrlf"]
[ext_resource type="Material" uid="uid://cimhmqlj16qqv" path="res://assets/shaders/smooth_pixel.tres" id="2_nw4pi"]
[ext_resource type="Texture2D" uid="uid://bg1fybbd3ov2i" path="res://assets/projectiles/harpoon.png" id="3_u2tus"]
[ext_resource type="PackedScene" uid="uid://3miicp8y7p5b" path="res://scenes/shared/multi_hitbox.tscn" id="4_w2ao2"]

[node name="HarpoonProjectile" type="Node2D"]
z_index = 1
script = ExtResource("1_yjrlf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 2
material = ExtResource("2_nw4pi")
position = Vector2(22, 0)
texture = ExtResource("3_u2tus")

[node name="MultiHitbox" parent="." instance=ExtResource("4_w2ao2")]
position = Vector2(1.5718, -23.2764)
collision_mask = 6

[node name="CollisionPolygon2D" parent="MultiHitbox" index="0"]
position = Vector2(14, 0)
polygon = PackedVector2Array(-14.5718, 21.2764, -14.5718, 22.2764, -15.5718, 22.2764, -15.5718, 24.2764, -4.5718, 24.2764, 20.4282, 25.2764, 25.4282, 25.2764, 27.4282, 24.2764, 29.4282, 23.2764, 30.4282, 22.2764, 30.4282, 21.2764)

[node name="SelfDestructTimer" type="Timer" parent="."]
autostart = true

[connection signal="self_destruct" from="MultiHitbox" to="." method="_on_multi_hitbox_self_destruct"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]

[editable path="MultiHitbox"]
